<resources>
    <string name="app_name">TipCalculator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="amount">Amount</string>
    <string name="custompercent">Custom %</string>
    <string name="amountdisplaytext" />
    <string name="tiptextview">Tip</string>
    <string name="totaltextview">Total</string>
    <string name="percent15TextView">15%</string>
    <string name="percentCustomTextView">18%</string>
    <string name="tip15TextView">$0.00</string>
    <string name="tipCustomTextView">$0.00</string>
    <string name="total15TextView">$0.00</string>
    <string name="totalCustomTextView">$0.00</string>
</resources>
