<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:columnCount="1"
    android:useDefaultMargins="false"
    android:rowCount="5"
    android:id="@+id/grid">


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/amountDisplayTextView"
        android:layout_row="0"
        android:layout_column="0"
        android:labelFor="@+id/amountEditText"
        android:background="@android:color/holo_green_dark"
        android:padding="@dimen/textview_padding"
        android:gravity="fill_horizontal" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/amountEditText"
        android:layout_row="0"
        android:layout_column="0"
        android:digits="0123456789"
        android:maxLength="6"
        android:visibility="visible"
        android:textSize="0dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_column="0"
        android:layout_row="1">

        <TextView
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/custompercent"
            android:id="@+id/customPercentTextView"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="center_vertical|right"
            android:gravity="end|right"
            android:layout_marginRight="@dimen/textciew_margin"
            android:layout_weight=".3" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/customTipSeekBar"
            android:layout_row="1"
            android:layout_column="1"
            android:max="30"
            android:longClickable="false"
            android:progress="18"
            android:layout_weight=".8" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:id="@+id/percentLinearLayout"
        android:gravity="fill_horizontal">

        <Space
            android:layout_width="8dp"
            android:layout_height="fill_parent"
            android:layout_weight=".5"
            android:layout_margin="@dimen/textciew_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/percent15TextView"
            android:id="@+id/percent15TextView"
            android:singleLine="true"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/percentCustomTextView"
            android:id="@+id/percentCustomTextView"
            android:layout_weight="1"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:id="@+id/tipLinearLayout">

        <TextView
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tiptextview"
            android:id="@+id/tipTextView"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="@dimen/textciew_margin"
            android:layout_weight=".5"
            android:gravity="center_vertical|right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tip15TextView"
            android:id="@+id/tip15TextView"
            android:background="@android:color/holo_purple"
            android:padding="@dimen/textview_padding"
            android:gravity="center"
            android:width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/textciew_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tipCustomTextView"
            android:id="@+id/tipCustomTextView"
            android:background="@android:color/holo_purple"
            android:padding="@dimen/textview_padding"
            android:layout_weight="1"
            android:width="0dp"
            android:layout_gravity="center"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:id="@+id/totalLinearLayout">

        <TextView
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/totaltextview"
            android:id="@+id/totalTextView"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="@dimen/textciew_margin"
            android:layout_weight=".5"
            android:gravity="center_vertical|right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/total15TextView"
            android:id="@+id/total15TextView"
            android:background="@android:color/holo_purple"
            android:padding="@dimen/textview_padding"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:width="0dp"
            android:layout_marginRight="@dimen/textciew_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/totalCustomTextView"
            android:id="@+id/totalCustomTextView"
            android:background="@android:color/holo_purple"
            android:padding="@dimen/textview_padding"
            android:width="0dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="1" />
    </LinearLayout>

</GridLayout>
